Test/git-issues/git-issue-1618.dfy.expect
git-issue-1618.dfy(11,9): Error: to reveal a function (mul), append parentheses
1 resolution/type errors detected in git-issue-1618.dfy
